--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
     <head>
-          <meta charset="UTF-8" />
-          <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-          <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-          <title>StudyHub - Complete Learning Management System</title>
+        <title>StudyHub - Learning Management System</title>
+    <style>
+        body{margin:0;font-family:Arial,sans-serif;background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);min-height:100vh;display:flex;align-items:center;justify-content:center}
+        .container{text-align:center;color:white;padding:40px}
+        h1{font-size:3em;margin-bottom:20px}
+        p{font-size:1.2em;margin-bottom:30px}
+        .btn{background:white;color:#667eea;padding:15px 30px;border:none;border-radius:25px;font-size:1.1em;cursor:pointer;text-decoration:none;display:inline-block}
+        .btn:hover{background:#f0f0f0}
+        </style>
     </head>
-  <body>
-        <div id="root"></div>
-        <script type="module" src="/src/main.jsx"></script>
-  </body>
+    <body>
+        <div class="container">
+            <h1>Welcome to StudyHub</h1>
+        <p>A modern learning management system for university students</p>
+        <a href="#" class="btn" onclick="alert('StudyHub is now live! Login system coming soon.')">Get Started</a>a>
+        </div>div>
+    </body>
+</html></p></h1>
+    </body>
+    </style></title>
+    </head>
 </html>
-  </body></title>
-    </head>
